2006-12-06  Steve Frécinaux  <code@istique.net>

	* plugins/externaltools/tools/__init__.py: fix regression: accelerators
	weren't shown in the tool menu anymore.

=== gedit 2.17.1 ===

2006-12-04  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.17.1 released

2006-12-04  Steve Frécinaux  <code@istique.net>

	Bug 381761 – External Tools: nested menus support (code-wise).

	* plugins/externaltools/tools/__init__.py: new ToolMenu object,
	managing the tool menu; place added command menus in a shared
	placeholder to avoid weird interactions with other plugins using
	ToolsOpt_4.

	* plugins/externaltools/tools/functions.py: remove menu-related
	functions that have been replaced with the new object.

	* plugins/externaltools/tools/library.py: add a name attribute to the
	ToolDirectory class.

	* plugins/externaltools/tools/manager.py: adapt for above changes.

	Note: despite the new ToolMenu object handles nested menus, the
	manager still only allow to edit the root menu.

2006-12-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit/plugins/filebrowser/gedit-file-browser-widget.c: use
	"folder" instead of "directory" in the UI.

2006-12-04  Paolo Maggi  <paolo@gnome.org>

	* plugins/spell/*: cleaned up previous patch. Unused GErrors have been
	removed.

2006-12-04  Paolo Maggi  <paolo@gnome.org>

	* HACKING:
	* README: fixed a couple of typos

	* configure.ac: show message-of-doom

	* message-of-doom: updated

2006-12-04  Paolo Maggi  <paolo@gnome.org>

	* configure.ac:
	* plugins/spell/*:

	Switch the spell plugin to the enchant library and use
	the iso-codes package to retrieve language names.
	The port to the enchant spell checking library is based
	on a patch by Sertaç Ö. Yıldız. Bug #365899.

2006-12-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c (gedit_window_key_press_event): avoid
	problems with XIM (bug #376750)

2006-12-02  Steve Frécinaux  <code@istique.net>
