@@ -1,3 +1,9 @@
+2006-12-07  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-view.c (ensure_search_window): use inline completion
+	instead of the popup menu for the incremental search entry
+	(completion_func): custom completion function
+	
 2006-12-06  Steve Frécinaux  <code@istique.net>
 
 	* plugins/externaltools/tools/__init__.py: fix regression: accelerators
